Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3543

C++ Broker: auto-acknowledged messages are not being dequeued properly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.13
    • 0.13
    • C++ Broker
    • None
    • any

    Description

      Bug introduced by https://issues.apache.org/jira/browse/QPID-3346 prevents messages that are auto-acknowledged from being correctly dequeued. Example: run qpid-perftest, then examine the perftest queue via qpid-stat -q command. The number of dequeues is incorrectly set to zero.

      Attachments

        Issue Links

          Activity

            People

              kgiusti Ken Giusti
              kgiusti Ken Giusti
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: