QPID-3543: correctly dequeue messages that are auto-acknowledged.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1182084 13f79535-47bb-0310-9956-ffa450edef68